--- a/src/index.css
+++ b/src/index.css
@@ -12,11 +12,12 @@
   --color-grey: #AAAAAA;
   --color-white: #FFFFFF;
 }
-html,body{
+body{
   margin: 0;
   padding: 0;
   max-width: 100%;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 * {
   box-sizing: border-box;
